@@ -1,6 +1,7 @@
 SUBDIRS                    = dolfin
 nobase_include_HEADERS     = dolfin/dolfin_stokes.h \
-                             dolfin/Stokes.h \
+                             dolfin/Stokes2D.h \
+                             dolfin/Stokes3D.h \
                              dolfin/StokesSolver.h
 INCLUDES                   = @MODULE_CFLAGS@
 lib_LIBRARIES              = libdolfin-stokes.a
