@@ -1,1 +1,1 @@
-EXTRA_DIST = dolfin_stokes.h Stokes.h StokesSolver.h
+EXTRA_DIST = dolfin_stokes.h Stokes2D.h Stokes3D.h StokesSolver.h
